--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "regular-show",
   "bin": "regular-show.js",
-  "version": "1.0.26",
+  "version": "1.0.28",
   "description": "Get random name of Regular Show",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -30,5 +30,9 @@
   "dependencies": {
     "meow": "^3.7.0",
     "unique-random-array": "^1.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^4.0.1",
+    "should": "^13.1.1"
   }
 }
